--- a/styles/layouts/_header.scss
+++ b/styles/layouts/_header.scss
@@ -13,7 +13,13 @@
   z-index: -2;
 
   @include view($desktop-size) {
-    height: 20vh;
+    background-image: linear-gradient(
+      to right,
+      $bgc-red-cta,
+      $bgc-light-red-cta
+    );
+    height: 80vh;
+    padding:  20px 150px;
   }
 
   &__icon {
@@ -21,6 +27,10 @@
     font-family: $overpass;
     font-weight: weight(semi-bold);
     color: $clr-primary-text;
+
+    @include view($desktop-size) {
+        font-size: 32px;
+    }
   }
 
   #{&}__container {
@@ -28,13 +38,14 @@
     justify-content: space-between;
     align-items: center;
     height: 15vh;
+
+    @include view($desktop-size) {
+        height: 10vh;
+    }
   }
 
   &__introduction {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+   @include flex(column);
     height: 80vh;
     padding: 0 25px;
     text-align: center;
@@ -42,11 +53,20 @@
     color: $clr-primary-text;
     transform: translateY(-40px);
     z-index: 100;
+
+    @include view($desktop-size) {
+        flex-grow: 1;
+        // transform: translateY(0);
+    }
   }
 
   &__title {
     font-size: 34px;
     font-weight: weight(bold);
+
+    @include view($desktop-size) {
+        font-size: 54px;
+    }
   }
 
   &__intro {
@@ -61,6 +81,10 @@
     @include flex(row);
     width: 100%;
     height: 20vh;
+
+    @include view($desktop-size) {
+        margin-top: 30px;
+    }
   }
 
   &__svg {
@@ -73,7 +97,11 @@
   }
 
   &__image {
-      pointer-events: all;
-      z-index: 999;
+    pointer-events: all;
+    z-index: 999;
+
+    @include view($desktop-size) {
+        display: none;
+    }
   }
 }
