--- a/styles/layouts/_footer.scss
+++ b/styles/layouts/_footer.scss
@@ -9,10 +9,17 @@
     border-radius: 0 80px 0 0;
     color: $clr-primary-text;
 
+    @include view($desktop-size) {
+        @include flex(row, space-evenly);
+        align-items: flex-start;
+        padding: 80px 200px 80px 0;
+    }
+
     &__title {
         font-size: 40px;
         margin-bottom: 50px;
         padding-top: 30px;
+        align-self: flex-start;
     }
 
     &__name {
@@ -28,5 +35,9 @@
     &__element {
         color: $clr-footer-text;
         font-size: $fs-small;
+
+        @include view($desktop-size) {
+            padding: 5px 0;
+        }
     }
 }
