--- a/styles/layouts/_state.scss
+++ b/styles/layouts/_state.scss
@@ -4,42 +4,74 @@
   margin-top: 300px;
   position: relative;
 
+  @include view($desktop-size) {
+    margin: 0 0 50px;
+  }
+
   &__container {
-      height: 100vh;
-      background-color: $bgc-gray-blue;
-      border-radius: 0 80px 0 80px;
-      position: relative;
-      top: 0;
-      left: 0;
+    height: 100vh;
+    background-color: $bgc-gray-blue;
+    border-radius: 0 80px 0 80px;
+    position: relative;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    @include flex(column);
+
+    @include view($desktop-size) {
+        background-image: linear-gradient(to right bottom, $bgc-gray-blue, $bgc-destaturated-blue);
+      height: 60vh;
       overflow: hidden;
+      //   z-index: -2;
+    }
   }
 
   &__circle {
-      position: absolute;
-      top: -250px;
-      left: -100px;
-      width: 600px;
+    position: absolute;
+    top: -250px;
+    left: -100px;
+    width: 600px;
+
+    @include view($desktop-size) {
+        width: 60%;
+        left: -150px;
+        top: -450px;
+    }
   }
 
   &__image {
-      width: 100%;
-      position: absolute;
-      top: -200px;
-      left: 0;
+    width: 100%;
+    position: absolute;
+    top: -200px;
+    left: 0;
+    
+    @include view($desktop-size) {
+        width: 45%;
+        top: -90px;
+        left: 50px;
+    }
   }
 
   &__descript {
-      position: absolute;
-      top: 35%;
-      padding: 30px;
-      color: $clr-primary-text;
-      font-family: $overpass;
-      text-align: center;
+    position: absolute;
+    top: 35%;
+    padding: 30px;
+    color: $clr-primary-text;
+    font-family: $overpass;
+    text-align: center;
+
+    @include view($desktop-size) {
+        width: 600px;
+        top: 50%;
+        transform: translateY(-50%);
+        text-align: left;
+        align-self: flex-end;
+        right: 100px;
+    }
   }
 
   &__title {
-      font-size: 35px;
-      margin-bottom: 30px;
+    font-size: 35px;
+    margin-bottom: 30px;
   }
 }
-
